--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# to download SDL:
+# sudo apt install libsdl2-dev
+
+sdl2 = "0.32"
+
+
 [dependencies]
