--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2018"
 # to download SDL:
 # sudo apt install libsdl2-dev
 
-sdl2 = "0.32"
 
 
 [dependencies]
+sdl2 = "0.32"
+rand = "0.7.3"
